--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "mlx>=0.29.4",
+    "numpy>=2.3.4",
 ]
 
 [tool.uv.workspace]
